--- a/main.tex
+++ b/main.tex
@@ -1,14 +1,14 @@
 \documentclass{article}
 \usepackage[margin=1in]{geometry}
 \title{The Raven}
-\author{Forked from Edgar Allen Poe by the 2025 MCSB Bootcamp team}
+\author{Forked from Edgar Allen Poe by the 2025 MCSB Bootcamp team, Aaliyah}
 \begin{document}
 \maketitle 
 
-Once upon a bright sunny day, while I pondered, weak and weary,
+Once upon a bright sunny day, while I pondered, weak and teary,
 Over many a quaint and curious volume of forgotten lore—
     While I nodded, nearly napping, suddenly there came a tapping,
-As of some one gently rapping, rapping at my chamber door.
+As of some one gently rapping, rapping at my chamber door, rapping as fast as Nicki Minaj.
 ``'Tis some visitor,” I muttered, “tapping at my chamber door—
             Only this and nothing more.”
 
