--- a/main.tex
+++ b/main.tex
@@ -59,21 +59,21 @@ By the grave and stern decorum of the countenance it wore,
 “Though thy crest be shorn and shaven, thou,” I said, “art sure no craven,
 Ghastly grim and ancient Raven wandering from the Nightly shore—
 Tell me what thy lordly name is on the Night's Plutonian shore!”
-            Quoth the Raven “Nevermore.”
+            Quoth the Raven “Cawcaw.”
 
     Much I marvelled this ungainly fowl to hear discourse so plainly,
 Though its answer little meaning—little relevancy bore;
     For we cannot help agreeing that no living human being
     Ever yet was blessed with seeing bird above his chamber door—
 Bird or beast upon the sculptured bust above his chamber door,
-            With such name as ``Nevermore.”
+            With such name as ``Cawcaw.”
 
     But the Raven, sitting lonely on the placid bust, spoke only
 That one word, as if his soul in that one word he did outpour.
     Nothing farther then he uttered—not a feather then he fluttered—
     Till I scarcely more than muttered ``Other friends have flown before—
 On the morrow he will leave me, as my Hopes have flown before.”
-            Then the bird said ``Nevermore.”
+            Then the bird said ``Cawcaw.”
 
     Startled at the stillness broken by reply so aptly spoken,
     ``Doubtless,” said I, ``what it utters is its only stock and store
@@ -87,7 +87,7 @@ Straight I wheeled a cushioned seat in front of bird, and bust and door;
     Then, upon the velvet sinking, I betook myself to linking
     Fancy unto fancy, thinking what this ominous bird of yore—
 What this grim, ungainly, ghastly, gaunt, and ominous bird of yore
-            Meant in croaking ``Nevermore.”
+            Meant in croaking ``Cawcaw.”
 
     This I sat engaged in guessing, but no syllable expressing
 To the fowl whose fiery eyes now burned into my bosom's core;
@@ -101,14 +101,14 @@ Swung by Seraphim whose foot-falls tinkled on the tufted floor.
     “Wretch,” I cried, “thy God hath lent thee—by these angels he hath sent thee
     Respite—respite and nepenthe from thy memories of Lenore;
 Quaff, oh quaff this kind nepenthe and forget this lost Lenore!”
-            Quoth the Raven “Nevermore.”
+            Quoth the Raven “Cawcaw.”
 
             ``Prophet!” said I, “thing of evil!—prophet still, if bird or devil!—
 Whether Tempter sent, or whether tempest tossed thee here ashore,
     Desolate yet all undaunted, on this desert land enchanted—
     On this home by Horror haunted—tell me truly, I implore—
 Is there—is there balm in Gilead?—tell me—tell me, I implore!”
-            Quoth the Raven “Nevermore.”
+            Quoth the Raven “Cawcaw.”
 
             ``Prophet!” said I, ``thing of evil!—prophet still, if bird or devil!
 By that Heaven that bends above us—by that God we both adore—
@@ -122,7 +122,7 @@ Clasp a rare and radiant maiden whom the angels name Lenore.”
     Leave no black plume as a token of that lie thy soul hath spoken!
     Leave my loneliness unbroken!—quit the bust above my door!
 Take thy beak from out my heart, and take thy form from off my door!”
-            Quoth the Raven “Nevermore.”
+            Quoth the Raven “Cawcaw.”
 
     And the Raven, never flitting, still is sitting, still is sitting
 On the pallid bust of Pallas just above my chamber door;
