Update main.tex with R&J line
Added a line from Shakespeare's Romeo and Juliet to line 2 of the story.

--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,7 @@
 \maketitle 
 
 Once upon a bright sunny day, while I pondered, weak and weary,
+But soft, what light through yonder window breaks;
 Over many a quaint and curious volume of forgotten lore—
     While I nodded, nearly napping, suddenly there came a tapping,
 As of some one gently rapping, rapping at my chamber door.
