--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@ Let my heart be still a moment and this mystery explore;—
 'Tis the wind and nothing more!”
 
     Open here I flung the shutter, when, with many a flirt and flutter,
-In there stepped a stately Raven of the saintly days of yore;
+In there stepped a stately Duck of the saintly days of yore;
     Not the least obeisance made he; not a minute stopped or stayed he;
     But, with mien of lord or lady, perched above my chamber door—
 Perched upon a bust of Pallas just above my chamber door—
