Added a line to the poem (second paragraph at the end) on main.tex

--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@ And each separate dying ember wrought its ghost upon the floor.
     From my books surcease of sorrow—sorrow for the lost Lenore—
 For the rare and radiant maiden whom the angels name Lenore—
             Nameless here for evermore.
+        Except my name is MJ and I am not nameless :)
 
     And the silken, sad, uncertain rustling of each purple curtain
 Thrilled me—filled me with fantastic terrors never felt before;
