--- a/main.tex
+++ b/main.tex
@@ -5,14 +5,14 @@
 \begin{document}
 \maketitle 
 
-Once upon a bright sunny day, while I pondered, weak and weary,
+Once upon a dark gloomy day, while I pondered, weak and weary,
 Over many a quaint and curious volume of forgotten lore—
     While I nodded, nearly napping, suddenly there came a tapping,
 As of some one gently rapping, rapping at my chamber door.
 ``'Tis some visitor,” I muttered, “tapping at my chamber door—
             Only this and nothing more.”
 
-    Ah, distinctly I remember it was in the bleak December;
+    Ah, distinctly I remember it was in the bleak February;
 And each separate dying ember wrought its ghost upon the floor.
     Eagerly I wished the morrow;—vainly I had sought to borrow
     From my books surcease of sorrow—sorrow for the lost Lenore—
@@ -34,14 +34,14 @@ That I scarce was sure I heard you”—here I opened wide the door;—
             Darkness there and nothing more.
 
     Deep into that darkness peering, long I stood there wondering, fearing,
-Doubting, dreaming dreams no mortal ever dared to dream before;
+Doubting, dreaming dreams every mortal dreams everyday;
     But the silence was unbroken, and the stillness gave no token,
     And the only word there spoken was the whispered word, “Lenore?”
 This I whispered, and an echo murmured back the word, ``Lenore!”—
             Merely this and nothing more.
 
     Back into the chamber turning, all my soul within me burning,
-Soon again I heard a tapping somewhat louder than before.
+Soon again I heard a tapping somewhat quieter than before.
 ``Surely,” said I, “surely that is something at my window lattice;
       Let me see, then, what thereat is, and this mystery explore—
 Let my heart be still a moment and this mystery explore;—
