--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage[margin=1in]{geometry}
 \title{The Raven}
-\author{Forked from Edgar Allen Poe by the 2025 MCSB Bootcamp team, Aaliyah}
+\author{Forked from Edgar Allen Poe by the 2025 MCSB Bootcamp team, by Aaliyah}
 \begin{document}
 \maketitle 
 
