--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@ In there stepped a stately Duck of the saintly days of yore;
 Perched upon a bust of Pallas just above my chamber door—
             Perched, and sat, and nothing more.
 
-Then this ebony bird beguiling my sad fancy into smiling,
+Then this duck beguiling my sad fancy into smiling,
 By the grave and stern decorum of the countenance it wore,
 “Though thy crest be shorn and shaven, thou,” I said, “art sure no craven,
 Ghastly grim and ancient Raven wandering from the Nightly shore—
